Update Group 51 files.

--- a/content/posters/2024/Q4/Group 51/students/Bertold Kovács/student_info.yaml
+++ b/content/posters/2024/Q4/Group 51/students/Bertold Kovács/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Teaching How to Learn to Learn: Teacher-Student Curriculum Learning for Efficient Meta-Learning'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Aa6f14fad-ed12-41a1-b6c7-7608ab385f74?collection=education'
 firstName: Bertold
 lastName: Kovács
 repositoryUrl: ''
