Update Group 77 files.

--- a/content/posters/2024/Q4/Group 77/students/Andrei-Iulian Vişoiu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 77/students/Andrei-Iulian Vişoiu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Detecting Collaborative Scanners based on Shared Behavioral Features
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:80b6738e-ff8b-4831-8d53-fe772b4a453d'
 firstName: Andrei-Iulian
 lastName: Vişoiu
 repositoryUrl: 'https://github.com/KruZZy/detecting-collaborative-scanners'
