--- a/content/posters/2024/Q4/Group 77/students/Fatih Açıkkollu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 77/students/Fatih Açıkkollu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Detecting Collaborative ZMap Scans
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:7199d7ec-6b4d-4cc8-a5bc-1ccff618c234'
 firstName: Fatih
 lastName: Açıkkollu
 repositoryUrl: 'https://github.com/purificateur/collaborative_zmap_scans'
