--- a/content/posters/2024/Q4/Group 64/students/Arthur Jacques/student_info.yaml
+++ b/content/posters/2024/Q4/Group 64/students/Arthur Jacques/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Concurrency with effects and handlers
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:88c2722b-97b3-47b9-a8a6-01e15e7c4644'
 firstName: Arthur
 lastName: Jacques
 repositoryUrl: 'https://github.com/Arthur158/concurrency_effects'
