--- a/content/posters/2024/Q4/Group 64/students/Matej Tomášek/student_info.yaml
+++ b/content/posters/2024/Q4/Group 64/students/Matej Tomášek/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Algebraic Effects and Handlers for Software Transactional Memory
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:a4b267de-fe91-4672-9acb-e81961d2a6f0'
 firstName: Matej
 lastName: Tomášek
 repositoryUrl: 'https://github.com/watc4d0gg/Algebraic-Effects-and-Handlers-for-Software-Transactional-Memory'
