Edit Group 42 files.

--- a/content/posters/2024/Q4/Group 42/students/Alan Styslavski/student_info.yaml
+++ b/content/posters/2024/Q4/Group 42/students/Alan Styslavski/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Imperceptible Backdoor Attacks on Deep Regression Using the WaNet Method
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:75fb295c-0fbf-4580-a1d8-0a80801b65a8'
 firstName: Alan
 lastName: Styslavski
 repositoryUrl: 'https://github.com/AStyslavski/WaNet-On-DRM-RELEASE'
