Add Group 60 files.

--- a/content/posters/2024/Q4/Group 60/students/Filip Marchidan/student_info.yaml
+++ b/content/posters/2024/Q4/Group 60/students/Filip Marchidan/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The dissociation of researchers from superstars through a new metric
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:2558692e-2a58-4430-8b4f-42a374c840d9'
 firstName: Filip
 lastName: Marchidan
 repositoryUrl: ''
