--- a/content/posters/2024/Q4/Group 60/students/Filip Plonka/student_info.yaml
+++ b/content/posters/2024/Q4/Group 60/students/Filip Plonka/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Independent Thinkers and Scientific Progress: An Analysis of Superstar Influence on Computer Science Research Dynamics'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:b572af32-25b9-4aa7-978c-8f3f187ef3b2'
 firstName: Filip
 lastName: Plonka
 repositoryUrl: 'https://github.com/fplonka/cse3000'
