Update Group 69 files

--- a/content/posters/2024/Q4/Group 69/students/Cassandra M.S. Visser/student_info.yaml
+++ b/content/posters/2024/Q4/Group 69/students/Cassandra M.S. Visser/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Dynamically Transparent Ghost Instructors and Their Effect on Learning and Skill Retention in Virtual Reality Environments
 paperUrl: 'http://resolver.tudelft.nl/uuid:ca94599c-a9fe-4ec8-b429-e129d2ddc8ab'
-firstName: Cassandra
+firstName: Cassandra M.S.
 lastName: Visser
 repositoryUrl: 'https://github.com/C-Hoek/thesis-vr-dynamic-ghost-instructors-2024'
