Add Group 7 files.

--- a/content/posters/2024/Q4/Group 7/students/Athanasios Christopoulos/student_info.yaml
+++ b/content/posters/2024/Q4/Group 7/students/Athanasios Christopoulos/student_info.yaml
@@ -1,7 +1,7 @@
 thesisTitle: |-
   Exploring the prominence of specific musical features in music listened by
   children of different age ranges
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A0c48ad3a-0e02-4139-8a11-0e76f8e6a202?collection=education'
 firstName: Athanasios
 lastName: Christopoulos
 repositoryUrl: ''
