--- a/content/posters/2024/Q4/Group 7/students/Borislav Semerdzhiev/student_info.yaml
+++ b/content/posters/2024/Q4/Group 7/students/Borislav Semerdzhiev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Using the listening history of youngsters to predict the features of the perfect song
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A70258914-4432-4024-993c-308ca136949c?collection=education'
 firstName: Borislav
 lastName: Semerdzhiev
 repositoryUrl: ''
