--- a/content/posters/2024/Q4/Group 7/students/Jasper Heijne/student_info.yaml
+++ b/content/posters/2024/Q4/Group 7/students/Jasper Heijne/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Recommending Appropriate Lyrics to Youngsters
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A18346356-1262-408c-8883-a813a3c0a933?collection=education'
 firstName: Jasper
 lastName: Heijne
 repositoryUrl: 'https://github.com/JasperHeijne/research_project'
