Update Group 37 files

--- a/content/posters/2024/Q4/Group 37/students/Dragos Ileana/student_info.yaml
+++ b/content/posters/2024/Q4/Group 37/students/Dragos Ileana/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A study of the accuracy of a ResUNet-based approach for predicting the minimum joint space width along the weight-bearing part of the hip joint in a 2D image ...
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Adea5a743-96c6-4c17-9227-c294bb64ce5b?collection=education'
 firstName: Dragos
 lastName: Ileana
 repositoryUrl: 'https://github.com/iDragos1234/Research-Project'
