Update Group 37 files

--- a/content/posters/2024/Q4/Group 37/students/Kees Blok/student_info.yaml
+++ b/content/posters/2024/Q4/Group 37/students/Kees Blok/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Segmentation of the hip joint space based on a radial projection originating from the center of the femoral head
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A9afd6b11-2984-4377-ab91-f0c15f86fcb4?collection=education'
 firstName: Kees
 lastName: Blok
 repositoryUrl: ''
