--- a/content/posters/2024/Q4/Group 37/students/Adam Bayle/student_info.yaml
+++ b/content/posters/2024/Q4/Group 37/students/Adam Bayle/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Challenges in Domain Adaptation for Medical Image Segmentation
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A8faf2a2d-3286-435e-a419-9599b537a202?collection=education'
 firstName: Adam
 lastName: Bayle
 repositoryUrl: ''
