Update Group 3 Files

--- a/content/posters/2024/Q4/Group 3/students/Thijmen Star/student_info.yaml
+++ b/content/posters/2024/Q4/Group 3/students/Thijmen Star/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Social Sensing with a Smart Cup
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:cf7b3207-f3c6-4b31-9c79-d524686345de'
 firstName: Thijmen
 lastName: Star
 repositoryUrl: ''
