Update Group 3 Files

--- a/content/posters/2024/Q4/Group 3/students/Dorothy Zhang/student_info.yaml
+++ b/content/posters/2024/Q4/Group 3/students/Dorothy Zhang/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Identifying Speaking and Drinking Events Within Audio Recordings for Multiactivity Analysis
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:0e9a100f-691c-42f8-97f9-b7304eb288a6'
 firstName: Dorothy
 lastName: Zhang
 repositoryUrl: ''
