--- a/content/posters/2024/Q4/Group 3/students/Kyungmin Nam/student_info.yaml
+++ b/content/posters/2024/Q4/Group 3/students/Kyungmin Nam/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: "Personalized Gesture Range Detection using Transductive Parameter\_Transfer"
-paperUrl: ''
+thesisTitle: "Personalized Gesture Range Detection using Transductive Parameter Transfer"
+paperUrl: 'http://resolver.tudelft.nl/uuid:0a3e9249-940a-4e78-9e56-05788c598e49'
 firstName: Kyungmin
 lastName: Nam
 repositoryUrl: ''
