--- a/content/posters/2024/Q4/Group 3/students/Maosheng Jiang/student_info.yaml
+++ b/content/posters/2024/Q4/Group 3/students/Maosheng Jiang/student_info.yaml
@@ -1,4 +1,4 @@
-thesisTitle: "How to maximize the capabilities of in-mouth sensors for human activity\_recognition?"
+thesisTitle: "How to maximize the capabilities of in-mouth sensors for human activity recognition?"
 paperUrl: 'http://resolver.tudelft.nl/uuid:3b563c31-f545-4b2d-9b90-b35a0c148a10'
 firstName: Maosheng
 lastName: Jiang
