Add repository URLs

--- a/content/posters/2024/Q4/Group 33/students/Begüm Koç/student_info.yaml
+++ b/content/posters/2024/Q4/Group 33/students/Begüm Koç/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Implications of LLMs4Code on Copyright Infringement
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:a5601a1d-2c38-468a-bcc6-000bf41b45f7'
 firstName: Begüm
 lastName: Koç
 repositoryUrl: ''
