--- a/content/posters/2024/Q4/Group 33/students/Ciprian Ionescu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 33/students/Ciprian Ionescu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Red-Teaming Code LLMs for Malware Generation
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:bb5a6ebe-d5b5-4563-aa29-8ad662a0f732'
 firstName: Ciprian
 lastName: Ionescu
 repositoryUrl: 'https://github.com/CiRIP/red_teaming_llm'
