--- a/content/posters/2024/Q4/Group 33/students/Ignas Vasiliauskas/student_info.yaml
+++ b/content/posters/2024/Q4/Group 33/students/Ignas Vasiliauskas/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Exploring the Generation and Detection of Weaknesses in LLM Generated Code
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:d2bb29dc-3121-4bac-a77e-33c3a132ff24'
 firstName: Ignas
 lastName: Vasiliauskas
 repositoryUrl: ''
