--- a/content/posters/2024/Q4/Group 33/students/Ioana Moruz/student_info.yaml
+++ b/content/posters/2024/Q4/Group 33/students/Ioana Moruz/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: How can Large Languages Models for code be used to harm the privacy of users?
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:102d0504-1313-4feb-a389-78aca6247648'
 firstName: Ioana
 lastName: Moruz
 repositoryUrl: ''
