--- a/content/posters/2024/Q4/Group 33/students/Sebastian Deatc/student_info.yaml
+++ b/content/posters/2024/Q4/Group 33/students/Sebastian Deatc/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Red Teaming Large Language Models for Code: Exploring Dangerous and Unfair Software Applications'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:b971d032-fac5-410a-a028-9e8f0f45d556'
 firstName: Sebastian
 lastName: Deatc
 repositoryUrl: ''
