Add Group 24 links

--- a/content/posters/2024/Q4/Group 24/students/Nicolae Filat/student_info.yaml
+++ b/content/posters/2024/Q4/Group 24/students/Nicolae Filat/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Program Synthesis from Rewards using Probe and FrAngel: Impact of Exploration-Exploitation Configurations on Probe and FrAngel in Minecraft'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:20952d2e-436d-4ff3-ad1e-eaedeaa9db76'
 firstName: Nicolae
 lastName: Filat
 repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/exploration-vs-exploitation-in-frangel-and-probe'
