--- a/content/posters/2024/Q4/Group 24/students/Timur Mukminov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 24/students/Timur Mukminov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Reward Based Program Synthesis for Minecraft: Adapting Program Synthesizers for Reward Evaluation and Leveraging Discovered Programs'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:49e7fbbe-cec7-4ed5-8c52-bd1bb850e917'
 firstName: Timur
 lastName: Mukminov
 repositoryUrl: 'https://github.com/Herb-AI/HerbSearch.jl/tree/probe-with-minerl-exploit'
