--- a/content/posters/2024/Q4/Group 15/students/Anca Badiu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 15/students/Anca Badiu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'E-GMFlow: Time granularity for transformer architectures in event-based optical flow'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Afae8b1f9-7d79-4c89-8877-08f86262fab7?collection=education'
 firstName: Anca
 lastName: Badiu
 repositoryUrl: ''
