--- a/content/posters/2024/Q4/Group 15/students/Mark van den Berg/student_info.yaml
+++ b/content/posters/2024/Q4/Group 15/students/Mark van den Berg/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Unsupervised optical flow estimation of event cameras
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A9cc5aaa0-2521-4fe5-ba46-5c321f864ae1?collection=education'
 firstName: Mark
 lastName: van den Berg
 repositoryUrl: ''
