Update Group 49 with links

--- a/content/posters/2024/Q4/Group 49/Alex Păcurar/student_info.yaml
+++ b/content/posters/2024/Q4/Group 49/Alex Păcurar/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Graph Neural Networks Training Set Analysis
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A71a1f92a-f99c-42af-9127-88df7c89d350?collection=education'
 firstName: Alex
 lastName: Păcurar
 repositoryUrl: 'https://github.com/AlexPacurar01/Research-Project-Code'
