--- a/content/posters/2024/Q4/Group 49/Danae Savvidi/student_info.yaml
+++ b/content/posters/2024/Q4/Group 49/Danae Savvidi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Scalability of Graph Neural Networks in Traffic Forecasting
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A7d832017-e8ff-4ddf-98ac-99d772618be0?collection=education'
 firstName: Danae Natalie
 lastName: Savvidi
 repositoryUrl: ''
