--- a/content/posters/2024/Q4/Group 49/Ivans Kravcevs/student_info.yaml
+++ b/content/posters/2024/Q4/Group 49/Ivans Kravcevs/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Regional Transferability of Graph Neural Networks for Traffic Forecasting
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Acd829fd8-71fd-43db-9ce1-96afb14e7201?collection=education'
 firstName: Ivans
 lastName: Kravcevs
 repositoryUrl: 'https://github.com/ikrvc/dcrnn_transferability'
