--- a/content/posters/2024/Q4/Group 49/Vlad Vrânceanu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 49/Vlad Vrânceanu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Graph Neural Networks for Long-Term Traffic Forecasting
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A4512a2ff-f0a1-4aac-89f6-c46e1944e7e8?collection=education'
 firstName: Vlad
 lastName: Vrânceanu
 repositoryUrl: ''
