--- a/content/posters/2024/Q4/Group 49/Wiktor Grzybko/student_info.yaml
+++ b/content/posters/2024/Q4/Group 49/Wiktor Grzybko/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Effectiveness of Graph Neural Networks and Simpler Network Models in Various Traffic Scenarios
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A7178e73c-03b0-41a8-bb66-aeeb16635b69?collection=education'
 firstName: Wiktor
 lastName: Grzybko
 repositoryUrl: ''
