Added TU Delft repo links
Added TU Delft repo links

--- a/content/posters/2024/Q4/Group 1/students/Pavlos Markesinis/student_info.yaml
+++ b/content/posters/2024/Q4/Group 1/students/Pavlos Markesinis/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Analysing Data Features on Algorithmic Fairness in Machine\_Learning"
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:75b48bfb-3a62-4c23-b04a-cfc71305acb6'
 firstName: Pavlos
 lastName: Markesinis
 repositoryUrl: ''
