Adds papers and code

--- a/content/posters/2024/Q4/Group 72/students/Amanda Krudde/student_info.yaml
+++ b/content/posters/2024/Q4/Group 72/students/Amanda Krudde/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Detecting Patterns in Train Position Data of Trains in Shunting Yards
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:c2571eaf-b322-4f06-a1d2-42637907ad7e'
 firstName: Amanda
 lastName: Krudde
-repositoryUrl: ''
+repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Weerdt_Hanou/shared-learning-patterns-in-train-position-data'
