--- a/content/posters/2024/Q4/Group 72/students/Mitchell van Pelt/student_info.yaml
+++ b/content/posters/2024/Q4/Group 72/students/Mitchell van Pelt/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Examining Manual Solutions of the Train Unit Shunting Problem to find Train\_Type\_Patterns"
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:3571427e-98af-429c-ad0c-3b6d5310ee43'
 firstName: Mitchell
 lastName: van Pelt
-repositoryUrl: ''
+repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Weerdt_Hanou/shared-learning-patterns-in-train-position-data'
