--- a/content/posters/2024/Q4/Group 72/students/Ivo Yordanov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 72/students/Ivo Yordanov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Analysis of Shunting Yard Usage and Train Unit Clustering
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:7547d112-b018-4c4f-a0a9-9ebb97a288e4'
 firstName: Ivo
 lastName: Yordanov
-repositoryUrl: ''
+repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Weerdt_Hanou/shared-learning-patterns-in-train-position-data'
