Add Group 22 Paper Links.

--- a/content/posters/2024/Q4/Group 22/students/Ana Bătrîneanu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 22/students/Ana Bătrîneanu/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: Exploring the Synergy Between Inverse Reinforcement Learning and Reinforcement Learning From Human Feedback for Query Reduction
-paperUrl: ''
+thesisTitle: Exploring the Synergy Between Inverse Reinforcement Learning and...
+paperUrl: 'http://resolver.tudelft.nl/uuid:a17dc948-dbbf-4b1d-84df-8fde8c2fadde'
 firstName: Ana
 lastName: Bătrîneanu
 repositoryUrl: 'https://github.com/anabat8/airlhf_rp'
