--- a/content/posters/2024/Q4/Group 22/students/Petar Koev/student_info.yaml
+++ b/content/posters/2024/Q4/Group 22/students/Petar Koev/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Conflict in the World of Inverse Reinforcement Learning: Investigating Inverse Reinforcement Learning with Conflicting Demonstrations'
-paperUrl: ''
+thesisTitle: 'Conflict in the World of Inverse Reinforcement Learning...'
+paperUrl: 'http://resolver.tudelft.nl/uuid:7abb6efc-35ac-4346-beb3-7d576e59e714'
 firstName: Petar
 lastName: Koev
 repositoryUrl: 'https://github.com/petrkoev17/Conflicting-Inverse-Reinforcement-Learning'
