--- a/content/posters/2024/Q4/Group 22/students/Zanyar Ogurlu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 22/students/Zanyar Ogurlu/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: 'Decreasing the number of demonstrations required for Inverse Reinforcement Learning by integrating human feedback'
-paperUrl: ''
+thesisTitle: 'Decreasing the number of demonstrations required for Inverse Reinforcement Learning...'
+paperUrl: 'http://resolver.tudelft.nl/uuid:f7d6ca83-4d2e-4713-9e0a-0129215e4f71'
 firstName: Zanyar
 lastName: Ogurlu
 repositoryUrl: 'https://github.com/ZanyarsGithub/research-project'
