Add Group 39 files.

--- a/content/posters/2024/Q4/Group 39/students/Dmytro Maksymchuk/student_info.yaml
+++ b/content/posters/2024/Q4/Group 39/students/Dmytro Maksymchuk/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Curvature-Based Bilateral Filter for Image Smoothing
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A63cb122f-53df-4b40-900f-b14bf46928cb?collection=education'
 firstName: Dmytro
 lastName: Maksymchuk
 repositoryUrl: ''
