--- a/content/posters/2024/Q4/Group 39/students/Mihnea Bernevig/student_info.yaml
+++ b/content/posters/2024/Q4/Group 39/students/Mihnea Bernevig/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: On-Mesh Bilateral Filtering
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A998d1a03-af18-4628-ba5c-aa654f154622?collection=education'
 firstName: Mihnea
 lastName: Bernevig
 repositoryUrl: ''
