--- a/content/posters/2024/Q4/Group 39/students/Simeon Atanasov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 39/students/Simeon Atanasov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Frequency-based Bilateral Filter on Graphics Cards
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A9e50ad7d-d6fb-4e05-8fb4-6cd5c4fa8a59?collection=education'
 firstName: Simeon
 lastName: Atanasov
 repositoryUrl: ''
