Add Group 53 files.

--- a/content/posters/2024/Q4/Group 53/students/Lucas Fatas/student_info.yaml
+++ b/content/posters/2024/Q4/Group 53/students/Lucas Fatas/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Watermarking Time Series Diffusion Models
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A4201a618-8299-4b2a-9115-8b8e96d08f2a?collection=education'
 firstName: Lucas
 lastName: Fatas
 repositoryUrl: ''
