--- a/content/posters/2024/Q4/Group 53/students/Renyi Yang/student_info.yaml
+++ b/content/posters/2024/Q4/Group 53/students/Renyi Yang/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Watermarking Diffusion Graph Models
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A11bf2977-0b07-4f41-a17a-c67e30a981c1?collection=education'
 firstName: Renyi
 lastName: Yang
 repositoryUrl: ''
