Update Group 27 Files

--- a/content/posters/2024/Q4/Group 27/students/Ana Cristiana Marcu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 27/students/Ana Cristiana Marcu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Leveraging LLMs for Classifying Subjective Topics Behind Public Discourse
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:70b36d6b-054e-45b0-b4ad-7e424c5e67ab'
 firstName: Ana Cristiana
 lastName: Marcu
 repositoryUrl: 'https://github.com/AnaCMarcu/ClassifyingSubjectiveTopics'
