Add last repo link group 61

--- a/content/posters/2024/Q4/Group 61/students/Vladimir Petkov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 61/students/Vladimir Petkov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Curve Reconstruction and Approximation in Binarised Scanned Historic Watermark Images
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:6c35d3d0-0b2b-49e3-9822-e278d8812f1e'
 firstName: Vladimir
 lastName: Petkov
 repositoryUrl: ''
