Add Group 23 Files.

--- a/content/posters/2024/Q4/Group 23/students/Yifei Lu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 23/students/Yifei Lu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Increasing gender diversity in Computer Science - A research on gender inclusivity in materials provided during the matching and selection process
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Ab94d75c5-5f07-4382-8270-736133d8279f?collection=education'
 firstName: Yifei
 lastName: Lu
 repositoryUrl: ''
