--- a/content/posters/2024/Q4/Group 23/students/Nina Immig/student_info.yaml
+++ b/content/posters/2024/Q4/Group 23/students/Nina Immig/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Are the course materials of the first year of the Computer Science Bachelor representing documented stereotypes for computer scientists?
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Ad004d920-03d3-4194-a0da-ba792b1b6564?collection=education'
 firstName: Nina
 lastName: Immig
 repositoryUrl: ''
