--- a/content/posters/2024/Q4/Group 23/students/Vladimir Pavlov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 23/students/Vladimir Pavlov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: "Higher Education Policies for Female Retention in Computer Science"
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Aaae5145a-4748-4339-b60e-ffdf9ab5f26a?collection=education'
 firstName: Vladimir
 lastName: Pavlov
 repositoryUrl: ''
