--- a/content/posters/2024/Q4/Group 61/students/Sydney Kho/student_info.yaml
+++ b/content/posters/2024/Q4/Group 61/students/Sydney Kho/student_info.yaml
@@ -2,4 +2,4 @@ thesisTitle: "A Comparison of Feature Extraction Techniques for Binarized Conten
 paperUrl: 'http://resolver.tudelft.nl/uuid:28a6143d-94de-481c-82b8-1811f0051b80'
 firstName: Sydney
 lastName: Kho
-repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Skrodzki_Castaneda/sydneykho-Automated-processing-of-scanned-historic-watermar'
+repositoryUrl: 'https://github.com/super-sydney/research-project'
