Added paperUrl for the rest of the group

--- a/content/posters/2024/Q4/Group 50/students/Arda Turhan/student_info.yaml
+++ b/content/posters/2024/Q4/Group 50/students/Arda Turhan/student_info.yaml
@@ -1,4 +1,4 @@
 thesisTitle: "EvoLLve'M: Improving Test Assertions and Mutations Score using ChatGPT-4o and EvoSuite"
-paperUrl: ""
+paperUrl: "http://resolver.tudelft.nl/uuid:a672e55b-5fa3-4512-a706-4d96a259b2a7"
 firstName: Arda
 lastName: Turhan
