--- a/content/posters/2024/Q4/Group 50/students/Stefan Creastă/student_info.yaml
+++ b/content/posters/2024/Q4/Group 50/students/Stefan Creastă/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Bug Buster Enhancing Unit Tests using ChatGPT-3.5
-paperUrl: ""
+paperUrl: "http://resolver.tudelft.nl/uuid:2a0d3a6a-3b3c-4b14-915c-cca35843bd07"
 firstName: Stefan
 lastName: Creastă
 repositoryUrl: "https://github.com/stefan-creasta/research-project-cse-3000.git"
