add links to papers

--- a/content/posters/2024/Q4/Group 30/students/Petra Postelnicu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 30/students/Petra Postelnicu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Object Roughly There: CAM-based Weakly Supervised Object Detection'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:c16ff438-d285-439e-a59d-a4af2b67ee8b'
 firstName: Petra
 lastName: Postelnicu
 repositoryUrl: 'https://github.com/petrapostelnicu/ort_cam_wsod'
