--- a/content/posters/2024/Q4/Group 30/students/Zeryab Alam/student_info.yaml
+++ b/content/posters/2024/Q4/Group 30/students/Zeryab Alam/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Identifying Labeling Errors Without Access to Ground Truth'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:1181a5fc-1d6e-4c3c-99b7-13499b9ec044'
 firstName: Zeryab
 lastName: Alam
 repositoryUrl: 'https://github.com/zeri27/EnsembAudit'
