--- a/content/posters/2024/Q4/Group 30/students/Laurens Michielsen/student_info.yaml
+++ b/content/posters/2024/Q4/Group 30/students/Laurens Michielsen/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Every human makes mistakes: Exploring the sensitivity of deep-learned object detectors to human annotation noise'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:bd9e5b5c-e998-4159-ada7-e12c8567a191'
 firstName: Laurens
 lastName: Michielsen
 repositoryUrl: 'https://github.com/laurensmichielsen/Research-Project'
