Update Group 62 files

--- a/content/posters/2024/Q4/Group 62/students/Piotr Bieszczad/student_info.yaml
+++ b/content/posters/2024/Q4/Group 62/students/Piotr Bieszczad/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Performance of Decision Transformer in multi-task offline reinforcement learning
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:4ccd2c9f-438a-420d-9eec-c260719c1240'
 firstName: Piotr
 lastName: Bieszczad
 repositoryUrl: ''
