add paper links

--- a/content/posters/2024/Q4/Group 55/students/Cătălin Grîu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 55/students/Cătălin Grîu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: A Comparative Study of Fine-Tuning Pipelines for Integrating Large Language Models in Multimodal Data Analysis
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:cc1bbdfb-2ef7-489b-84c4-b25cf2bb312c'
 firstName: Cătălin
 lastName: Grîu
 repositoryUrl: ''
