--- a/content/posters/2024/Q4/Group 55/students/Efe Unluyurt/student_info.yaml
+++ b/content/posters/2024/Q4/Group 55/students/Efe Unluyurt/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Optimizing Dataset Quality for Enhanced Machine Learning Performance
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:8fff8762-4b42-40de-b787-5afec878ad6b'
 firstName: Efe
 lastName: Unluyurt
 repositoryUrl: ''
