--- a/content/posters/2024/Q4/Group 55/students/Vasco de Graaff/student_info.yaml
+++ b/content/posters/2024/Q4/Group 55/students/Vasco de Graaff/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Applying Fine-Tuning methods to FTTransformer in Anti Money Laundering applications
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:993a9301-9b33-40d1-9364-f1a48f110d26'
 firstName: Vasco
 lastName: de Graaff
 repositoryUrl: ''
