Add Group 35 links

--- a/content/posters/2024/Q4/Group 35/students/Alexandru Preda/student_info.yaml
+++ b/content/posters/2024/Q4/Group 35/students/Alexandru Preda/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'A Survey of Interrater Agreement in Datasets for Audio Visual Automatic Affect Prediction: A Systematic Literature Review'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3A0e071aa9-6c02-43dd-8881-c2d896fd4fe9?collection=education'
 firstName: Alexandru
 lastName: Preda
 repositoryUrl: ''
