--- a/content/posters/2024/Q4/Group 35/students/Oana Mădălina Fron/student_info.yaml
+++ b/content/posters/2024/Q4/Group 35/students/Oana Mădălina Fron/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Nuances of Interrater Agreement on Automatic Affect Prediction from Physiological Signals - A Systematic Review of Datasets Presenting Various Agreement Measures and Affect Representation Schemes'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Aa166fba5-6f47-4da2-9497-94e97e6d8954'
 firstName: Oana Mădălina
 lastName: Fron
 repositoryUrl: ''
