--- a/content/posters/2024/Q4/Group 46/students/Omar Elamin/student_info.yaml
+++ b/content/posters/2024/Q4/Group 46/students/Omar Elamin/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'See Clearly, Act Intelligently: Transformers in Transparent Environments'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:3023f9b4-f887-4545-a20e-de064401dfbb'
 firstName: Omar
 lastName: Elamin
 repositoryUrl: ''
