--- a/content/posters/2024/Q4/Group 46/students/Sten van Wolfswinkel/student_info.yaml
+++ b/content/posters/2024/Q4/Group 46/students/Sten van Wolfswinkel/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Acting in the Face of Uncertainty: Pessimism in Model-Based Reinforcement Learning'
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:2fa22ec9-88a4-4f71-bb04-ef606ec6b48a'
 firstName: Sten
 lastName: van Wolfswinkel
 repositoryUrl: ''
