--- a/content/posters/2024/Q4/Group 46/students/Mihai Mitrea/student_info.yaml
+++ b/content/posters/2024/Q4/Group 46/students/Mihai Mitrea/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Understanding the effects of discrete representations in Model-Based Reinforcement Learning
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:8852479d-8a45-4305-b6ee-be01f6c54dd4'
 firstName: Mihai
 lastName: Mitrea
 repositoryUrl: 'https://github.com/Miha5092/discrete-latent-states-MBRL'
