--- a/content/posters/2024/Q4/Group 46/students/Severin Bratus/student_info.yaml
+++ b/content/posters/2024/Q4/Group 46/students/Severin Bratus/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Generalisation Ability of Proper Value Equivalent Models in Model-Based Reinforcement Learning
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:49da7493-2cff-4fd0-85f7-0ee0f9219b26'
 firstName: Severin
 lastName: Bratus
 repositoryUrl: 'https://github.com/severinbratus/compare_pve_mle'
