Update Group 34 files.

--- a/content/posters/2024/Q4/Group 34/students/Andrei Dragoi/student_info.yaml
+++ b/content/posters/2024/Q4/Group 34/students/Andrei Dragoi/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Exploring Test Suite Coverage of Large Language Model–Enhanced Unit Test Generation
-paperUrl: 'https://repository.tudelft.nl/islandora/search/?collection=education'
+paperUrl: 'http://resolver.tudelft.nl/uuid:3940725d-a367-418d-bf19-407e65d7b902'
 firstName: Andrei
 lastName: Drăgoi
 repositoryUrl: ''
