Update group 57 files

--- a/content/posters/2024/Q4/Group 57/students/Mark Dragnev/student_info.yaml
+++ b/content/posters/2024/Q4/Group 57/students/Mark Dragnev/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Average RBO Between Independent Rankings
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:21b475ce-54ec-494a-a58c-68ba180d47e9'
 firstName: Mark
 lastName: Dragnev
 repositoryUrl: 'https://github.com/mark200/expected-rbo'
