--- a/content/posters/2024/Q4/Group 57/students/Oscar Kriebel/student_info.yaml
+++ b/content/posters/2024/Q4/Group 57/students/Oscar Kriebel/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: On Rank-Biased Overlap with Finite and Conjoint Domains
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:9cc3542f-ec7b-4d16-a354-66b862adec78'
 firstName: Oscar
 lastName: Kriebel
 repositoryUrl: ''
