Added paper links

--- a/content/posters/2024/Q4/Group 76/students/Vladimir Rullens/student_info.yaml
+++ b/content/posters/2024/Q4/Group 76/students/Vladimir Rullens/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Comparing Graph Neural Network task choices on their stability in face of perturbations
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:2600432b-990e-4eaa-9408-01dc8a4e3aaa'
 firstName: Vladimir
 lastName: Rullens
 repositoryUrl: ''
