--- a/content/posters/2024/Q4/Group 76/students/Yigit Colakoglu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 76/students/Yigit Colakoglu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: An Experimental Look at the Stability of Graph Neural Networks against Topological Perturbations
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:75f62f31-66a6-4455-b991-dd4a60fc6e46'
 firstName: Yigit
 lastName: Colakoglu
 repositoryUrl: 'https://github.com/arg3t/GNN_stability_and_features'
