--- a/content/posters/2024/Q4/Group 76/students/Alexander Brown/student_info.yaml
+++ b/content/posters/2024/Q4/Group 76/students/Alexander Brown/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Stability of Graph Neural Network with respect to different types of topological perturbations
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:765794ba-530c-43a6-9305-08a0418542f3'
 firstName: Alexander
 lastName: Brown
 repositoryUrl: ''
