--- a/content/posters/2024/Q4/Group 76/students/Rauno Arike/student_info.yaml
+++ b/content/posters/2024/Q4/Group 76/students/Rauno Arike/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Beyond Spectral Graph Theory: An Explainability-Driven Approach to Analyzing the Stability of GNNs to Topology Perturbations'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:bbc5eb7b-7b5b-40da-b6c9-df0b984b215f'
 firstName: Rauno
 lastName: Arike
 repositoryUrl: ''
