Update Group 48 files.

--- a/content/posters/2024/Q4/Group 48/students/Diana Micloiu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 48/students/Diana Micloiu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Using Weighted Voting to Optimise Streamlined Blockchain Consensus Algorithms
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:907bd47c-394a-4e26-b901-de713159dcb8'
 firstName: Diana
 lastName: Micloiu
 repositoryUrl: 'https://github.com/dmicloiu/weightedhotstuff'
