Add links to papers group 59.

--- a/content/posters/2024/Q4/Group 59/students/David Peța/student_info.yaml
+++ b/content/posters/2024/Q4/Group 59/students/David Peța/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Key Fragmentomics Features for Cancer Detection
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:f8e38dbc-7c58-42f8-ad31-61316128e58d'
 firstName: David
 lastName: Peța
 repositoryUrl: ''
