--- a/content/posters/2024/Q4/Group 59/students/Mirko Boon/student_info.yaml
+++ b/content/posters/2024/Q4/Group 59/students/Mirko Boon/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The Impact of Pre-processing Data on Fragmentomics Analysis Used in Cancer Screening
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:3ec46fae-5ba1-4f46-b47f-1ad9c5c47101'
 firstName: Mirko
 lastName: Boon
 repositoryUrl: ''
