--- a/content/posters/2024/Q4/Group 59/students/Monica Paun/student_info.yaml
+++ b/content/posters/2024/Q4/Group 59/students/Monica Paun/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Understanding The Influence of DNA Fragment Lengths in Detecting Cancer
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:4eb1a7bb-8199-44f9-a3bc-eaeb676d9061'
 firstName: Monica
 lastName: Paun
 repositoryUrl: ''
