--- a/content/posters/2024/Q4/Group 59/students/Stanisław Howard/student_info.yaml
+++ b/content/posters/2024/Q4/Group 59/students/Stanisław Howard/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Analysis of cell deconvolution methods: A comparison of reference-based and reference-free cell deconvolution'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:c3a387da-1e1d-412d-a8d8-25fd906bf73b'
 firstName: Stanisław
 lastName: Howard
-repositoryUrl: ''
+repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Reinders_Pronk_Hazelaar/showard-Detection-of-cancer-using-blood'
