--- a/content/posters/2024/Q4/Group 59/students/Amr Farooq/student_info.yaml
+++ b/content/posters/2024/Q4/Group 59/students/Amr Farooq/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Quantifying complementarity between different cfDNA features
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:7d738969-9b65-4e0b-960b-bfaab32c997c'
 firstName: Amr
 lastName: Farooq
 repositoryUrl: ''
