Update Group 8 files.

--- a/content/posters/2024/Q4/Group 8/students/Elena Ibanez/student_info.yaml
+++ b/content/posters/2024/Q4/Group 8/students/Elena Ibanez/student_info.yaml
@@ -1,5 +1,5 @@
-thesisTitle: Influence of Gradually Abstracting Adaptive Explanations on Human Supervision and Trust in Robots
-paperUrl: ''
+thesisTitle: How do adaptive explanations that become more abstract over time influence human supervision over and trust in the robot?
+paperUrl: 'https://repository.tudelft.nl/record/uuid:cda969f2-bb65-4329-b888-a990bb299583'
 firstName: Elena
 lastName: Ibanez
 repositoryUrl: 'https://github.com/rsverhagen94/TUD-Research-Project-2024/tree/adaptive_explanations'
