--- a/content/posters/2024/Q4/Group 8/students/Yi Wu/student_info.yaml
+++ b/content/posters/2024/Q4/Group 8/students/Yi Wu/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'The influence of robot explanations onhuman-robot teamwork for firefighting: Adding contrastive explanations to feature attributions'
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:22f397a2-03a5-462e-b2f1-2e7b176e678a'
 firstName: Yi
 lastName: Wu
 repositoryUrl: 'https://github.com/rsverhagen94/TUD-Research-Project-2024/tree/Contrastive_explanation'
