--- a/content/posters/2024/Q4/Group 8/students/Dafni Pandeva/student_info.yaml
+++ b/content/posters/2024/Q4/Group 8/students/Dafni Pandeva/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Influence of Global Explanations on Human Supervision and Trust in Agent
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:10902c76-46b0-4229-b9f6-80b10b2d2121'
 firstName: Dafni
 lastName: Pandeva
 repositoryUrl: 'https://github.com/rsverhagen94/TUD-Research-Project-2024/tree/global_expl'
