Update group 28 files.

--- a/content/posters/2024/Q4/Group 28/students/Dennis Heijmans/student_info.yaml
+++ b/content/posters/2024/Q4/Group 28/students/Dennis Heijmans/student_info.yaml
@@ -1,4 +1,4 @@
 thesisTitle: Splitting Context-Free Grammars to Optimize Program Synthesis
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:76d734de-65fc-4c95-b45c-3126e36fd073'
 firstName: Dennis
 lastName: Heijmans
