--- a/content/posters/2024/Q4/Group 28/students/Tudor Andrei/student_info.yaml
+++ b/content/posters/2024/Q4/Group 28/students/Tudor Andrei/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 'Scaling Program Synthesis: Combining Programs Learned on Subsets of Examples'
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:7b7a6243-35d8-4187-8631-7f362ad91955'
 firstName: Tudor
 lastName: Andrei
 repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Dumancic_Reid/tudorandrei-Symphonic-Synthesis-Learning-programs-by-composin'
