--- a/content/posters/2024/Q4/Group 36/students/Tijmen Meijer/student_info.yaml
+++ b/content/posters/2024/Q4/Group 36/students/Tijmen Meijer/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: How can we reduce the effect of noise on 3D Gaussian Splats?
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Abdfaf3a3-c2c6-4b3c-addf-b5903b746170?collection=education'
 firstName: Tijmen
 lastName: Meijer
 repositoryUrl: ''
