Fix broken links

--- a/content/posters/2024/Q4/Group 36/students/Dirk van Dale/student_info.yaml
+++ b/content/posters/2024/Q4/Group 36/students/Dirk van Dale/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: 3D Gaussian Splatting for PointNet Object Classification
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Aef9e967a-92bf-4ad6-83da-7d6e0b4fd470?collection=education'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:ef9e967a-92bf-4ad6-83da-7d6e0b4fd470'
 firstName: Dirk
 lastName: van Dale
 repositoryUrl: ''
