--- a/content/posters/2024/Q4/Group 36/students/Ken Kiisa/student_info.yaml
+++ b/content/posters/2024/Q4/Group 36/students/Ken Kiisa/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Application of Photogrammetry to Gaussian Splatting for mesh and texture reconstruction
-paperUrl: 'https://repository.tudelft.nl/islandora/object/uuid%3Ad065e549-bda4-4390-abeb-680c0ec41a01?collection=education'
+paperUrl: 'https://repository.tudelft.nl/record/uuid:d065e549-bda4-4390-abeb-680c0ec41a01'
 firstName: Ken
 lastName: Kiisa
 repositoryUrl: ''
