Update Group 68 files

--- a/content/posters/2024/Q4/Group 68/students/Milan Otten/student_info.yaml
+++ b/content/posters/2024/Q4/Group 68/students/Milan Otten/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Accelerating t-SNE using a uniform grid-based approximation
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:451fc0a5-476c-43e4-a4d0-63c8a53c8716'
 firstName: Milan
 lastName: Otten
 repositoryUrl: 'https://github.com/Milan7843/hyperbolic-tsne'
