Add paper links for group 47

--- a/content/posters/2024/Q4/Group 47/students/Marko Putnik/student_info.yaml
+++ b/content/posters/2024/Q4/Group 47/students/Marko Putnik/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Correct Timings and Inspection of States for Federated Learning Simulations
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:2c2305c3-709b-4062-8dec-4c7cd27a9834'
 firstName: Marko
 lastName: Putnik
 repositoryUrl: ''
