--- a/content/posters/2024/Q4/Group 47/students/Santiago de Heredia Tenorio/student_info.yaml
+++ b/content/posters/2024/Q4/Group 47/students/Santiago de Heredia Tenorio/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Exploring the Impact of Client Mobility on Decentralized Federated Learning Performance
-paperUrl: ''
+paperUrl: 'http://resolver.tudelft.nl/uuid:2da14d1f-f309-4a2d-97fc-17178874ce5b'
 firstName: Santiago
 lastName: de Heredia Tenorio
 repositoryUrl: 'https://github.com/asturnox/decentralizepy'
