Update Group 68 files

--- a/content/posters/2024/Q4/Group 68/students/Daniel Peter/student_info.yaml
+++ b/content/posters/2024/Q4/Group 68/students/Daniel Peter/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Accelerating Hyperbolic t-SNE using the Lorentz Model
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:977ffee3-b1ab-44bc-9361-0eb607d9df0c'
 firstName: Daniel
 lastName: Peter
 repositoryUrl: 'https://github.com/XDead27/hyperbolic-tsne-lorentz'
