--- a/content/posters/2024/Q4/Group 68/students/Dido Dimitrov/student_info.yaml
+++ b/content/posters/2024/Q4/Group 68/students/Dido Dimitrov/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Accelerating hyperbolic t-SNE Quadtree generalization for the upper half-plane model
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:3382d6c4-d525-4a34-87b0-66b79973a4ec'
 firstName: Dido
 lastName: Dimitrov
 repositoryUrl: 'https://gitlab.ewi.tudelft.nl/cse3000/2023-2024-q4/Skrodzki_Eisemann/dhdimitrov-Approximating-Nearest-Neighbors-in-Hyperbolic-Spa.git'
