--- a/content/posters/2024/Q4/Group 68/students/Yehor Kozyr/student_info.yaml
+++ b/content/posters/2024/Q4/Group 68/students/Yehor Kozyr/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: Hyperbolic t-SNE with a Quadtree Splitting in the Cartesian Coordinate System
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:e8faa3e6-972b-4a4b-9f37-1d2b8e10b680'
 firstName: Yehor
 lastName: Kozyr
 repositoryUrl: 'https://github.com/Sne4kers/hyperbolic-tsne'
