Add Group 32 files.

--- a/content/posters/2024/Q4/Group 32/students/Cătălin Brița/student_info.yaml
+++ b/content/posters/2024/Q4/Group 32/students/Cătălin Brița/student_info.yaml
@@ -1,7 +1,7 @@
 thesisTitle: |-
   SimuDICE: Offline Policy Optimization Through Iterative
   World Model Updates and DICE Estimation
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:b2bd24d0-d8d0-40bd-bb06-703af7889230'
 firstName: Cătălin
 lastName: Brița
 repositoryUrl: 'https://github.com/Catalin-2002/SimuDICE'
