--- a/content/posters/2024/Q4/Group 32/students/Tiberiu Sabău/student_info.yaml
+++ b/content/posters/2024/Q4/Group 32/students/Tiberiu Sabău/student_info.yaml
@@ -1,5 +1,5 @@
 thesisTitle: The Impact of Initial Start Distribution Mismatch on Policy Evaluation in Behavior-agnostic Reinforcement Learning
-paperUrl: ''
+paperUrl: 'https://repository.tudelft.nl/record/uuid:dc6e9cbb-74eb-4003-bfeb-15c079f7d8a5'
 firstName: Tiberiu
 lastName: Sabău
 repositoryUrl: ''
